# whois-server

./: .gitignore
django/: .dockerignore  build.sh  manage.py  proto.sh  requirements.txt
django/kubes/: apply.sh  django.yaml  nginx.yaml
django/whois/: apps.py  urls.py  views.py
django/whois/rdap_grpc/: rdap_pb2.py  rdap_pb2.pyi  rdap_pb2_grpc.py
django/whois/templates/whois/: base.html  search.html
django/whois/templates/whois/objects/: domain.html  entity.html  events.html  jscard.html  name_server.html  public_ids.html  remarks.html  status.html  vcard.html
django/whois/whois_grpc/: whois_pb2.py  whois_pb2_grpc.py
django/whois_client/: asgi.py  settings.py  settings_dev.py  urls.py  wsgi.py
rust/: Cargo.toml  Dockerfile  apply.sh  build.rs  build.sh  kube.yaml
rust/proto/: rdap.proto  whois.proto
rust/src/: main.rs  notice.txt
