[package]
name = "whois-server"
version = "0.1.0"
authors = ["Q <q@misell.cymru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2"
tokio = { version = "0.2", features = ["tcp", "macros", "dns"] }
log = "0.4"
prost = "0.6"
prost-types = "0.6"
lazy_static = "1.4"
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.2"